# lingvo-injector-app

./: .env  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  eslint.config.js  lefthook.yml  package-lock.json  package.json  tsconfig.json  types.d.ts  vite.config.ts
.github/: filters.yml
.github/actions/generate-release-notes/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: artifact-comment.yml  branch-check.yaml  create-release.yml  pr-build.yml  pr-check.yml  pr-comment-preview.yml  pr-quality-check.yml  release.yml  reusable-quality.yml
app/: README.md  package.json  vite.config.ts
app/src/: App.module.scss  App.tsx  i18n.ts  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/api/: translationApi.ts
app/src/hooks/: useSettingsActions.ts  useUpdateActions.ts
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  server.js
server/nginx/: nginx.conf
server/translations/: README.md
server/versions/: versions.json
src/: App.module.scss  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: translationApi.ts
src/components/: ActionButtons.tsx  FolderDisplay.tsx  LanguageSelector.tsx  MessageDisplay.tsx  VersionSelector.tsx
src/constants/: index.ts
src/contexts/: AppContext.tsx
src/hooks/: useSettingsActions.ts  useTranslationUpdateActions.ts  useUpdateActions.ts
src/locales/: en.json  ru.json
src/services/: localizationService.ts  settingsService.ts  tauriService.ts
src/stores/: RootStore.ts  SettingsStore.ts
src/styles/: _functions.scss  _reset.scss  _variables.scss  index.scss
src/types/: index.ts
(+48 files in other folders)
